Fix overall width of the BlogPosts list in case a title is too long.

--- a/static/css/devhub/new-landing/sections/more-information.less
+++ b/static/css/devhub/new-landing/sections/more-information.less
@@ -29,6 +29,7 @@
   ul {
     list-style: none;
     padding: 0;
+    width: 90%;
 
     li {
       a {
